# avr-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: avr-platform.cmake  avr-postbuild.cmake  toolchain-avr-gcc.cmake
src/: gpio.hpp  main.c  main.cpp  usart.hpp
toolchain/: generic-gcc-avr.cmake
tools/: avr-switch.sh
